; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-cache.c_snd_soc_8_16_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/extr_soc-cache.c_snd_soc_8_16_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_codec = type { i32*, i32, {}* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_codec*, i32)* @snd_soc_8_16_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_soc_8_16_read(%struct.snd_soc_codec* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_codec*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.snd_soc_codec* %0, %struct.snd_soc_codec** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %8 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %12 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = icmp uge i32 %10, %13
  br i1 %14, label %20, label %15

15:                                               ; preds = %2
  %16 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @snd_soc_codec_volatile_register(%struct.snd_soc_codec* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %15, %2
  %21 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %22 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %21, i32 0, i32 2
  %23 = bitcast {}** %22 to i32 (%struct.snd_soc_codec*, i32)**
  %24 = load i32 (%struct.snd_soc_codec*, i32)*, i32 (%struct.snd_soc_codec*, i32)** %23, align 8
  %25 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 %24(%struct.snd_soc_codec* %25, i32 %26)
  store i32 %27, i32* %3, align 4
  br label %34

28:                                               ; preds = %15
  %29 = load i32*, i32** %6, align 8
  %30 = load i32, i32* %5, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %28, %20
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @snd_soc_codec_volatile_register(%struct.snd_soc_codec*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
